# deltaglider_proxy

./: .deltaglider_bootstrap_hash  .dockerignore  .gitignore  .lycheeignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCKERHUB.md  Dockerfile  ENTERPRISE_STRATEGY.md  HARDENING_PLAN.md  LICENSE  MY_NOTES_DONT_COMMIT.txt  PLAN.md  README.md  build.rs  deltaglider_config.db  deltaglider_config.db.bak  deltaglider_proxy.example.yaml  deltaglider_proxy.toml.example  deny.toml  docker-compose.yml
.cargo/: audit.toml  config.toml
.cla-signatures/: signatures.json
.claude/agents/: codebase-hygiene-reviewer.md
.cursor/rules/: use-simple-select-not-ant-select.mdc
.deltaglider_scans/: delta-savings-dashboard.json
.github/builder/: Dockerfile
.github/k8s/: runner-set.yaml  sccache-minio.yaml
.github/workflows/: builder-image.yml  ci.yml  claude-code-review.yml  claude.yml  marketing-pages.yml  operator-ci.yml  prepare-release.yml  release.yml  tag-on-merge.yml  test-all-nightly.yml
.smoke-shots/: s3-cli-transcript.txt
benches/: codec.rs
charts/deltaglider-proxy/: .helmignore  Chart.yaml  README.md  values.yaml
demo/: artifactorypro.license.txt
docs/: AUTHENTICATION.md  CI_INFRA.md  CONFIGURATION.md  CONTRIBUTING.md  DELTA_RECONSTRUCTION.md  HARDENING_PLAN.md  HOWTO_IAM_CONDITIONS.md  HOWTO_MIGRATE_TO_YAML.md  HOWTO_SECURITY_BASICS.md  METRICS.md  OPERATIONS.md  PLAN.md  RATE_LIMITING.md  README.md  RELEASING.md  STORAGE_FORMAT.md
examples/: scrape_full_config.rs
future/: ENCRYPTION.md  GRAIL_OBJECTIVES.md  QUOTA.md  REPLICATION.md
iac-prod/: .gitignore  README.md  backup-zip-to-secrets-env.sh  create-maintenance-user.sh  deltaglider_proxy.yaml  docker-compose.yml  secrets.env.template
marketing/: .gitignore  astro.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
operator/: Cargo.toml  Dockerfile  README.md
operator/deploy/: crd.yaml  example.yaml  operator.yaml
operator/src/: crd.rs  main.rs  reconcile.rs  resources.rs
proptest-regressions/: bucket_policy.txt
scripts/: bench_s3_adapters.py  check-docs-registry.sh  check-docs-yaml-examples.sh  check-spdx-headers.sh  gen-changelog-doc.sh  release-prep.sh  restore-full-backup-zip.sh  run-from-backup-dir.sh
src/: audit.rs  background.rs  bucket_policy.rs  bucket_usage.rs  config.rs  config_apply.rs  config_db.rs  config_db.rs.bak  config_db_sync.rs  config_sections.rs  cors.rs  demo.rs  event_delivery.rs  event_outbox.rs  iam.rs  init.rs  job_loop.rs  lib.rs  logs.rs  main.rs  metadata_cache.rs  metrics.rs  multipart.rs  rate_limiter.rs  s3_adapter_s3s.rs  security.rs  session.rs  startup.rs  tls.rs  transfer.rs  transfer_plan.rs  types.rs  usage_scanner.rs
src/api/: mod.rs  (+7 more)
tests/: admin_bulk_objects_test.rs  admin_config_test.rs  admin_login_as_test.rs  admin_section_test.rs  admission_test.rs  auth_integration_test.rs  aws_chunked_upload_test.rs  backend_capability_gate_test.rs  backend_health_test.rs  bootstrap_password_hash_invariant_test.rs  browser_session_connect_test.rs  bucket_existence_test.rs  bucket_usage_test.rs  cli_admin_test.rs  cli_s3_cp_test.rs  cli_s3_migrate_test.rs  cli_s3_purge_test.rs  cli_s3_rm_test.rs  cli_s3_stats_test.rs  cli_s3_sync_test.rs  cli_s3_verify_test.rs  concurrency_test.rs  config_sync_ha_test.rs  config_sync_test.rs  coordination_lease_test.rs  delta_passthrough_test.rs  delta_test.rs  encryption_test.rs  error_test.rs  external_auth_test.rs  generation_pin_test.rs  iam_authorization_test.rs  iam_declarative_reconcile_test.rs  iam_identity_test.rs  iam_list_scope_test.rs  iam_mode_test.rs  iam_persona_test.rs  iam_test.rs  iam_variables_clone_test.rs  integration_test.rs  (+30 more)
(+605 files in other folders)
