[package]
name = "deltaglider_proxy"
version = "0.1.6"
description = "S3-compatible proxy with transparent delta compression"
license = "GPL-2.0-only"
readme = "README.md"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# AWS S3 SDK (for backend storage)
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"

# Async support
async-trait = "0.1"

# Delta compression
xdelta3 = "0.1.5"

# TLS certificate generation
rcgen = "0.13"

# Password hashing
bcrypt = "0.15"

# Random number generation
rand = { version = "0.8", features = ["std_rng"] }

# Hashing & HMAC (sha2 + hmac used for SigV4 verification)
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
hex = "0.4"
base64 = "0.22"

# XML for S3 responses
quick-xml = { version = "0.36", features = ["serialize"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.16"
parking_lot = "0.12"
bytes = "1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
arc-swap = "1"
urlencoding = "2"
tempfile = "3"
libc = "0.2"
xattr = "1"

# Embedded demo UI
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"

# CLI
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["minio"] }
