[package]
name = "deltaglider-operator"
version = "0.1.0"
description = "Kubernetes operator for DeltaGlider Proxy"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
kube = { version = "1", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.25", features = ["v1_32"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
futures = "0.3"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
